# tiny-tensorrt

./: CMakeLists.txt  Trt.h
src/: Trt.cu
